
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2023 FEB 16b
  * in model/chem/_C2H4_Air_Plasma_36s/chem.c
    - added CHEMMODEL_ADAMOVICH2023C
  * in model/fluid/_Navier-Stokes_plasma/fluid.c
    - in write_model_fluid_template(), read_model_fluid_actions(), added QENSOURCETERMS
  * in model/fluid/_Navier-Stokes_plasma/fluid_source.c
    - in find_Se() and find_dSe_dU_transport() added code to remove Qen when QENSOURCETERMS is set
      to FALSE
  

2023 FEB 16a
  * in model/chem/_C2H4_Air_Plasma_36s/chem.c
    - found a bug in find_dQei_dx(): !gl->model.chem.ADJUSTED_* should be gl->model.chem.ADJUSTED_*
  * in tools/chemkin2cfdwarp.c
    - fixed two bugs related to the Lindeman reactions
    

2023 FEB 15a
  * in model/chem/_C2H4_Air_Plasma_36s/
    - rearranged the files significantly so that the combustion model is not
      separated from the plasma model anymore; all the reactions are now rather stored in
      one file: adamovich2023d.c
    - fixed a bug related to the Lindeman reactions which were not implemented correctly in
      the 4th version of the Adamovich model 
  

2023 FEB 14b
  * in bin
    - fixed several wrp files so that the Faces() call is replaced by Plane() calls
    

2023 FEB 14a
  * in src/bdry.c
    - in read_bdry_actions(), got rid of the action Faces() which should be replaced in the 
      control files by the Plane() commands
      

2023 FEB 13a
  * in cycle/tsemf/_AF/tsemf.c
    - in update_dUstar_emfield_IMAF(), added a is_node_bdry() before
      calling find_bdry_direc()
  * in model/emfield/_Epotential/emfield.c
    - in find_linearization_coefficients_bdry_node_emfield(), added 
      assert(is_node_bdry(np[lA],TYPELEVEL_EMFIELD))
  * in src/bdry.c